# Aurion-os

./: .gitattributes  LICENSE  QUICKSTART.md  README.md
.github/workflows/: build-iso.yml
ai-services/: pyproject.toml
ai-services/aurion_ai/: __init__.py  dbus_service.py  provider.py  service.py
ai-services/aurion_ai/context_providers/: __init__.py  hardware.py  logs.py
ai-services/aurion_ai/prompts/: __init__.py  diagnose.py  explain.py
ai-services/aurion_ai/providers/: __init__.py  mock.py  ollama.py
ai-services/config/: ai.toml
ai-services/systemd/: aurion-ai.service
branding/: colors.md  logo-spec.md  typography.md
design-system/: components.md  tokens.json
diagnostics/: Cargo.toml
diagnostics/src/: changelog.rs  log_collector.rs  main.rs  rollback.rs  snapshot.rs
distro/: README.md  packages.list  remove-packages.list
distro/greeter/: README.md
distro/plymouth-theme/: aurion.plymouth  aurion.script
distro/skel/.config/labwc/: autostart  environment  rc.xml
distro/wayland-sessions/: aurion.desktop
docs/: app-store-concept.md  architecture.md  iso-build-plan.md  product-vision.md  roadmap.md  vm-setup-guide.md
hardware-compat/: Cargo.toml
hardware-compat/src/: classifier.rs  driver_matcher.rs  firmware_checker.rs  main.rs  scanner.rs
installer/: README.md
iso-build/: build-iso.sh  setup-builder.sh
iso-build/calamares/: settings.conf
iso-build/calamares/branding/aurion/: branding.desc  show.qml
iso-build/calamares/modules/: displaymanager.conf  partition.conf  postcfg.conf  users.conf  welcome.conf
iso-build/hooks/: 0200-calamares-setup.hook.chroot
scripts/: build-iso.sh  demo-build.sh  demo-run.sh  demo-setup.sh  demo-test.sh  setup-dev.sh
settings/: README.md
shell/: CMakeLists.txt
shell/src/: dbusclient.cpp  dbusclient.h  main.cpp  shelladaptor.cpp  shelladaptor.h  shellcontroller.cpp  shellcontroller.h
shell/src/qml/: AISidebar.qml  Dock.qml  Launcher.qml  Main.qml  TopBar.qml  qml.qrc  qmldir
shell/src/qml/theme/: AurionTheme.qml
