[project]
name = "aurion-ai"
version = "0.1.0"
description = "AurionOS AI Assistant Service — provider-agnostic LLM integration with D-Bus interface"
requires-python = ">=3.12"
license = {text = "GPL-3.0-or-later"}

dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]
dbus = [
    "dbus-next>=0.2.3",
]
ollama = [
    "ollama>=0.3",
]
all = [
    "aurion-ai[dbus,ollama]",
]

[project.scripts]
aurion-ai = "aurion_ai.service:main"

[tool.ruff]
line-length = 100
target-version = "py312"

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"
