[package]
name = "aurion-diag"
version = "0.1.0"
edition = "2021"
description = "AurionOS Diagnostics — log collection, Btrfs snapshots, changelog, and rollback"
license = "GPL-3.0-or-later"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
