[package]
name = "aurion-hwcompat"
version = "0.1.0"
edition = "2021"
description = "AurionOS Hardware Compatibility Scanner"
license = "GPL-3.0-or-later"

[[bin]]
name = "aurion-hwcompat"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
